--- a/src/components/Hero Section/PieChartComponent.module.css
+++ b/src/components/Hero Section/PieChartComponent.module.css
@@ -6,7 +6,7 @@
     gap: 12px;
     width: 300px;
 }
-
+/* 
 .label_wrapper {
     display: flex;
     align-items: center;
@@ -19,9 +19,9 @@
     border: none;
     height: 8px;
     width: 26px;
-}
+} */
 
-.label_title {
+/* .label_title {
     font-family: 'Open Sans';
     font-size: 12px;
     font-weight: 400;
@@ -35,22 +35,22 @@
     flex-wrap: wrap;
     column-gap: 16px;
     row-gap: 2px;
-}
+} */
 
-@media screen and (max-width: 1008px) {
+@media screen and (max-width: 1100px) {
     .pie_chart_section_wrapper {
         width: 256px;
     }
-    .labels_container {
+    /* .labels_container {
         column-gap: 14px;
-    }
+    } */
 }
 
 @media screen and (max-width: 640px) {
     .pie_chart_section_wrapper {
         width: 202px;
     }
-    .labels_container {
+    /* .labels_container {
         column-gap: 12px;
-    }
+    } */
 }
