--- a/src/components/TransactionAndExpenseSection/Expenses.module.css
+++ b/src/components/TransactionAndExpenseSection/Expenses.module.css
@@ -30,20 +30,16 @@
     padding: 12px 8px;
 }
 
-.composed_chart_component {
-    height: 100% !important;
-    width: 100% !important;
-    font-size: 12px;
-    font-weight: 400;
-    font-family: Open sans;
-    color: #000000;
-}
-
-
 
 @media screen and (max-width: 640px) {
+    .expenses_section_wrapper {
+        width: 100%;
+    }
     .heading {
         font-size: 24px;
         line-height: 28px;
+    }
+    .expenses_chart_wrapper {
+        padding: 8px 6px;
     }
 }
