--- a/src/components/TransactionAndExpenseSection/Transactions.module.css
+++ b/src/components/TransactionAndExpenseSection/Transactions.module.css
@@ -173,7 +173,8 @@
         width: 100%;
     }
     .transaction_list_wrapper {
-        padding: 8px 8px 8px 16px;
+        padding: 8px 8px 16px 16px;
+        height: fit-content;
     }
     .heading {
         font-size: 24px;
